--- a/src/WRA.Umbraco.Web/wwwroot/css/src/_typography.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/_typography.scss
@@ -153,7 +153,13 @@ h1, h2, h3, h4, .display-1 {
         font-weight: 600;
     }
 
-    h3, h4, h5 {
+    h3 {
+        font-family: $font-family-sans-serif;
+        font-size: math.div(20,16) * 1rem;
+        font-weight: 700;
+    }
+    
+    h4, h5 {
         font-family: $font-family-sans-serif;
         font-size: math.div(18,16) * 1rem;
         font-weight: 600;
@@ -163,6 +169,7 @@ h1, h2, h3, h4, .display-1 {
     h2, h3, h4 {
         text-transform: revert;
         margin-bottom: 1rem;
+        margin-top: 2rem;
     }
 
     &.rich-text-article {
