Deployment 7e77bcd1-c711-47fb-b4d0-dbf910102967: Run number 446

--- a/src/WRA.Umbraco.Web/Views/Article.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Article.cshtml
@@ -100,7 +100,7 @@
         @if (content.HasValue("image"))
         {
             <div class="col-md-6 d-flex flex-column justify-content-center">
-                <figure class="img-curved img-curved--large">
+                <figure class="img-curved img-curved--large text-end">
                     <img loading="lazy" class="img-fluid" src="@content.Image.Url()?width=550" srcset="@content.Image.Url()?width=1110 2x" width="@content.Image.Value("umbracoWidth")" height="@content.Image.Value("umbracoHeight")" alt="@(content.Image.Value("altText") ?? "")">
                 </figure>
             </div>
