--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/multimediaCenter.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/multimediaCenter.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container">
-    <div class="row align-items-center">
+    <div class="row align-items-center mb-4">
         <div class="col-12 col-sm-6">
             <h2 class="mb-0">@content.Value("heading")</h2>
         </div>
