--- a/src/WRA.Umbraco.Web/Views/CheckoutReviewPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutReviewPage.cshtml
@@ -4,31 +4,74 @@
     Layout = "CheckoutStepPage.cshtml";
 }
 
-@await Html.PartialAsync("Commerce/OrderInformationSummary")
+@* @await Html.PartialAsync("Commerce/OrderInformationSummary") *@
+
+@section aside {
+    @Html.Partial("CheckoutSidebar")
+}
 
 @using (await Html.BeginPaymentFormAsync(Model.Order)) 
 {
 
-    <div class="border border-gray-300 rounded">
-        <label class="flex items-center py-4 px-4 cursor-pointer hover:bg-gray-100">
-            <input id="acceptTerms" type="checkbox" value="1" class="mr-3" />
-            <span class="font-medium">I agree and accept the sites terms of service</span>
-        </label>
-    </div>
-
-    <div class="flex flex-col-reverse items-center justify-between mt-8 md:flex-row">
-        @if (Model.PreviousStep != null)
-        {
-            <div><a href="@(Model.PreviousStep.Url())" class=" hover:text-gray-900 hover:underline"><i class="fa fa-angle-left"></i> Return to @(Model.PreviousStep.Name)</a></div>
-        }
-        else
-        {
-            <div><a href="@(Model.CartPage.Url())" class=" hover:text-gray-900 hover:underline"><i class="fa fa-angle-left"></i> Return to Cart</a></div>
-        }
-        <div class="mb-4 w-full md:mb-0 md:w-auto text-center">
-            <div @*id="continue-disabled"*@ class="bg-gray-200 text-white px-4 py-4 w-full rounded cursor-not-allowed">Continue to @(Model.NextStep.Name)</div>
-            <button id="continue" class=" text-white px-4 py-4 w-full rounded hover:bg-gray-900" type="submit" @*style="display: none;"*@>Continue to @(Model.NextStep.Name)</button>
+    @* checkout summary *@
+    <div class="mb-5 px-3 py-1 border rounded">
+        <div class="d-flex flex-column flex-sm-row py-2">
+            <span style="width: 80px; color: #696f78;">Contact</span>
+            <span class="flex-grow-1">johnsmith@gmail.com</span>
+            <a class="text-decoration-none" href="#">Change</a>
+        </div>
+        <div class="d-flex flex-column flex-sm-row py-2 border-top">
+            <span style="width: 80px; color: #696f78;">Ship to</span>
+            <span class="flex-grow-1">1234 Maple Dr, Town Name, WI, 56789, United States</span>
+            <a class="text-decoration-none" href="#">Change</a>
+        </div>
+        <div class="d-flex flex-column flex-sm-row py-2 border-top">
+            <span style="width: 80px; color: #696f78;">Shipping method</span>
+            <span class="flex-grow-1">Standard Shipping | Free</span>
+            <a class="text-decoration-none" href="#">Change</a>
+        </div>
+        <div class="d-flex flex-column flex-sm-row py-2 border-top">
+            <span style="width: 80px; color: #696f78;">Payment method</span>
+            <span class="flex-grow-1">Visa ending with 000</span>
+            <a class="text-decoration-none" href="#">Change</a>
         </div>
     </div>
 
+    <div class="mt-5 p-4" style="border: 1px solid #d7d7dc; border-radius: 0.25rem;">
+        <table class="w-100">
+            <tr>
+                <td class="pb-3">Subtotal</td>
+                <td class="pb-3 text-end">@Model.Order.SubtotalPrice.WithoutAdjustments.Formatted().WithoutTax</td>
+            </tr>
+            <tr>
+                <td class="pb-3">Tax</td>
+                <td class="pb-3 text-end">@Model.Order.TotalPrice.Value.Formatted().Tax</td>
+            </tr>
+            @if (@Model.ShippingMethod != null)
+            {
+                var shippingAmount = @Model.Order.ShippingInfo.TotalPrice.Value;
+                <tr>
+                    <td class="pb-3">Shipping</td>
+                    <td class="pb-3 text-end">@Html.Raw(Convert.ToDouble(shippingAmount.WithTax) > 0.00 ? shippingAmount.Formatted() : "FREE")</td>
+                </tr>
+            }
+            @*{
+                var totalDiscount = Model.Order.GetTotalPriceAdjustmentByType<DiscountAdjustment>();
+                if (totalDiscount != 0)
+                {
+                    <tr>
+                        <td class="pb-3">Discounts</td>
+                        <td class="pb-3 text-end">@(totalDiscount.Formatted().WithoutTax)</td>
+                    </tr>
+                }
+            }*@
+            <tr class="fw-bold" style="border-top: 1px solid #d7d7dc;">
+                <td class="py-3">Total</td>
+                <td class="py-3 text-end">@Model.Order.TotalPrice.Value.Formatted()</td>
+            </tr>
+        </table>
+        <p class="fs-xs" style="color: #696f78;">*Disclaimers and fine print here about purchases, returns, exchanges, and cancellations.</p>
+    </div>
+
+    @await Html.PartialAsync("CheckoutPrevNext")
 }
