Deployment 4f3a4dd2-1350-48e0-b75a-0ced593ea1b2: Run number 448

--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/overline.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/overline.cshtml
@@ -36,11 +36,20 @@
     {
         style += $"margin-bottom:{content.BottomMargin} !important;";
     }
-    
+
     if (content.HasValue("strikeBehind") && content.Value<bool>("strikeBehind") == true)
     {
         className += $" overline--strikebehind";
     } 
+
+    if (content.HasValue("textColor") && content.HasValue("strikeBehind"))
+    {
+        style += $"--overline-color: #{content.TextColor};";
+    } 
+    else
+    {
+        style += $"--overline-color: #000000;";
+    }
 
     if (!String.IsNullOrEmpty(className))
     {
