--- a/src/WRA.Umbraco.Web/Views/Magazine.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Magazine.cshtml
@@ -64,7 +64,7 @@
                 <a href="@content.Pdf" class="btn btn-primary">Download PDF</a>
             </div>
             <div class="col-lg-8">
-                <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-between mb-33">
+                <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-between mb-3">
                     <h2 class="h3 mb-0">Read in News & Updates</h2>
                     <a href="/news-updates/" class="btn btn-primary btn-sm d-none d-lg-block">See All</a>
                 </div>
@@ -115,18 +115,17 @@
                   
                     @if (moreArticles.Any())
                     {
-
                         <div class="col-lg-5 ps-lg-1 ms-lg-auto">
                             <div class="ps-lg-4 border-medium border-start no-border-mobile h-100">
                                 <h3 class="h4 text-white px-3 py-2" style="background-color: var(--bs-blue-dark)">
                                     More News
                                 </h3>
-                                @* <ul class="list-unstyled gap-2 d-flex flex-column pt-2">
-                                    @foreach (var link in moreArticles.Where(x => x.IsVisible()))
+                                <ul class="list-unstyled gap-2 d-flex flex-column pt-2">
+                                    @foreach (var link in moreArticles)
                                     {
                                         <li><a href="@link.Url" class="fw-bold fs-sm" style="color: inherit" target="@link.Target">@link.Name</a></li>
                                     }
-                                </ul> *@
+                                </ul>
                             </div>
                         </div>
                     }
