Deployment f0e838af-56a7-4e18-94ad-8a2df8cab5c6: Run number 467

--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/calendar.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/calendar.cshtml
@@ -4,7 +4,7 @@
 @using ContentModels = WRA.Umbraco.Models;
 
 @{
-    var content = (ContentModels.EventCalendar)Model.Content;
+    var content = (ContentModels.Calendar)Model.Content;
     string className = "mb-3 mb-lg-4 container container--lg";
     string style = "";
     string props = "";
