Deployment 1701307e-dede-461a-a999-0c17d981d93c: Run number 476

--- a/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
@@ -1,6 +1,21 @@
 ﻿@using Umbraco.Cms.Web.Common.PublishedModels;
+@using WRA.Umbraco.Services;
+@using WRA.Umbraco;
+@using System.Linq;
+@using Umbraco.Commerce.Extensions;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.SubCategoryPage>
+@inject SearchService _searchService;
 @using ContentModels = WRA.Umbraco.Models;
 @{
-	Layout = null;
+	Layout = "~/Views/_Layout.cshtml";
+	var products = _searchService.SearchProductsBySubCategory(Model.UrlSegment!);
 }
+@foreach (var product in products.Select(x => x.Content as ProductPage))
+{
+	<div>
+		<h2>@product.Name</h2>
+		<p>@(product.MemberPricing?.Formatted())</p>
+    <p>@(product.NonMemberPricing.Formatted())</p>
+	</div>
+}
+ 
