Deployment 534eb6a1-9076-4784-be05-5256c7dee42f: Run number 482

--- a/src/WRA.Umbraco.Web/Views/Article.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Article.cshtml
@@ -55,7 +55,7 @@
                     @content.Category.Name
                 </a>
             }
-            <h1 class="mb-3 h5 pe-lg-5">
+            <h1 class="mb-3 h5 pe-lg-5 fs-2">
                 @articleTitle
             </h1>
             <div>
