Deployment 054e6653-1ab0-43f2-82ca-5d6709864ee2: Run number 487

--- a/src/WRA.Umbraco.Web/Views/MultimediaLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MultimediaLanding.cshtml
@@ -81,20 +81,20 @@
 
         @if (isVideo)
         {
-            <option value="video" selected>Video</option>
+            <option value="video" selected>Video Center</option>
         }
         else
         {
-            <option value="video">Video</option>
+            <option value="video">Video Center</option>
         }
 
         @if (isAudio)
         {
-            <option value="audio" selected>Audio</option>
+            <option value="audio" selected>Audio Library</option>
         }
         else
         {
-            <option value="audio">Audio</option>
+            <option value="audio">Audio Library</option>
         }
         
     </select>
