--- a/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
@@ -158,7 +158,7 @@
 </div>
 <div class="w-100 py-7 py-lg-10" style="background-color: var(--bs-gray-10)">
     <div class="container">
-        <h2 class="h3 mb-2 mb-lg-4">Catalog</h2>
+        <h2 class="h3 mb-2 mb-lg-4">Archive</h2>
         <div class="row">
             <div class="col-md-4 col-lg-2">
                 @if (magazineCollections.Any())
