Deployment bc2c1e6f-8d0c-46b4-97ae-84c499e2b490: Run number 491

--- a/src/WRA.Umbraco.Web/Views/MultimediaLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MultimediaLanding.cshtml
@@ -76,7 +76,7 @@
         }
         else
         {
-            <option value="">All</option>
+            <option value="">All Posts</option>
         }
 
         @if (isVideo)
