Deployment 2bee5211-17eb-4381-85db-23f1a66dea24: Run number 492

--- a/src/WRA.Umbraco.Web/Views/Magazine.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Magazine.cshtml
@@ -69,7 +69,7 @@
                     <a href="/news-updates/" class="btn btn-primary btn-sm d-none d-lg-block">See All</a>
                 </div>
                 <div class="row">
-                    <div class="col-lg-7 pe-lg-4">
+                    <div class="@(moreArticles.Any() ? "col-lg-7" : "col-lg-12") pe-lg-4">
                         <h3 class="h4 text-white px-3 py-2" style="background-color: var(--bs-blue-dark)">
                             Featured Articles
                         </h3>
