--- a/src/WRA.Umbraco.Web/Views/UmbracoTestform1.cshtml
+++ b/src/WRA.Umbraco.Web/Views/UmbracoTestform1.cshtml
@@ -2,4 +2,5 @@
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
 @{
 	Layout = null;
+	@await Umbraco.RenderMacroAsync("renderUmbracoForm", new {FormGuid="f72c26b1-8fad-42d3-acda-999e3f1da3a3", FormTheme="", ExcludeScripts="0"})
 }
