Deployment e220f98a-3703-490f-a3b4-43f50d156daf: Run number 508

--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/calendar.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/calendar.cshtml
@@ -1,5 +1,4 @@
-﻿@using Umbraco.Extensions
-@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem>
+﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem>
 @using Umbraco.Cms.Core.Models.Blocks;
 @using ContentModels = WRA.Umbraco.Models;
 
@@ -9,10 +8,10 @@
     string style = "";
     string props = "";
 
-    @* if (content.HasValue("additionalCssClasses"))
+     if (content.HasValue("additionalCssClasses"))
     {
         className += $" {content.AdditionalCssClasses}";
-    } *@
+    }
 
     if (!String.IsNullOrEmpty(className))
     {
