--- a/src/WRA.Umbraco.Web/Views/CheckoutInformationPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutInformationPage.cshtml
@@ -13,7 +13,7 @@
 {
     <div class="mb-10">
         <h2 class="h4" style="text-transform: none;">Account Information</h2>
-        <a href="">@Model.Order.CustomerInfo.Email</a>
+        <a href="" name="Email">@Model.Order.CustomerInfo.Email</a>
     </div>
 }
 
@@ -23,6 +23,10 @@
     <input type="hidden" name="nextStep" value="@(Model.NextStep?.Key)" />
 
     <div class="row g-2">
+        <div class="col-12">
+            <label for="customer-information-email" class="visually-hidden">Email</label>
+            <input id="customer-information-email" class="form-control" type="text" required name="Email" value="@(Model.Order.CustomerInfo.Email)" placeholder="Email" />
+        </div>
         <div class="col-12 col-md-6">
             <label for="customer-information-fname" class="visually-hidden">First name</label>
             <input id="customer-information-fname" class="form-control" type="text" required name="shippingAddress.Firstname" value="@(Model.Order.CustomerInfo.FirstName)" placeholder="First name" />
@@ -45,7 +49,7 @@
         </div>
         <div class="col-12 col-md-4">
             <label for="customer-information-city" class="visually-hidden">City</label>
-            <input id="customer-information-city" class="form-control" type="text" required name="shippingAddress.City" value="@(Model.Order.Properties["billingCity"])" placeholder="City" />
+            <input id="customer-information-city" class="form-control" type="text" required name="shippingAddress.City" value="@(Model.Order.Properties["shippingCity"])" placeholder="City" />
         </div>
         <div class="col-12 col-md-4">
             <label for="customer-information-state" class="visually-hidden">State</label>
