--- a/src/WRA.Umbraco.Web/Views/CheckoutReviewPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutReviewPage.cshtml
@@ -17,23 +17,23 @@
     <div class="mb-5 px-3 py-1 border rounded">
         <div class="d-flex flex-column flex-sm-row py-2">
             <span style="width: 80px; color: #696f78;">Contact</span>
-            <span class="flex-grow-1">johnsmith@gmail.com</span>
+            <span class="flex-grow-1">@Model.Order.CustomerInfo.Email</span>
             <a class="text-decoration-none" href="#">Change</a>
         </div>
         <div class="d-flex flex-column flex-sm-row py-2 border-top">
             <span style="width: 80px; color: #696f78;">Ship to</span>
-            <span class="flex-grow-1">1234 Maple Dr, Town Name, WI, 56789, United States</span>
+            <span class="flex-grow-1">@Model.ReadableShippingAddress</span>
             <a class="text-decoration-none" href="#">Change</a>
         </div>
         <div class="d-flex flex-column flex-sm-row py-2 border-top">
             <span style="width: 80px; color: #696f78;">Shipping method</span>
-            <span class="flex-grow-1">Standard Shipping | Free</span>
+            <span class="flex-grow-1">@Model.ShippingMethod.Name</span>
             <a class="text-decoration-none" href="#">Change</a>
         </div>
         <div class="d-flex flex-column flex-sm-row py-2 border-top">
             <span style="width: 80px; color: #696f78;">Payment method</span>
-            <span class="flex-grow-1">Visa ending with 000</span>
-            <a class="text-decoration-none" href="#">Change</a>
+            <span class="flex-grow-1">@Model.PaymentMethod.Name</span>
+            @* <a class="text-decoration-none" href="#">Change</a> *@
         </div>
     </div>
 
