Deployment 1ce53567-2a4e-45ec-9771-6610fbef8204: Run number 515

--- a/src/WRA.Umbraco.Web/Views/CheckoutConfirmationPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutConfirmationPage.cshtml
@@ -10,4 +10,4 @@
         <p><a href="/" class="inline-block text-white px-4 py-4 rounded hover:bg-gray-900">Return to Store</a></p>
     </div>
 
-@await Html.PartialAsync("Commerce/OrderInformationSummary")
+<partial name="Commerce/OrderInformationSummary" />
