--- a/src/WRA.Umbraco.Web/Views/Partials/Commerce/GlobalPaymentsForm.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/Commerce/GlobalPaymentsForm.cshtml
@@ -99,7 +99,7 @@
         //token.type = "hidden";
         //token.name = "paymentToken";
         token.value = resp.paymentReference;
-        alert('Here is a single-use token: ' + token.value);
+        //alert('Here is a single-use token: ' + token.value);
         // submit data to the integration's backend for processing
         const form = document.getElementById("payment-form");
         //form.submit();
