--- a/src/WRA.Umbraco.Web/Views/Partials/Commerce/OrderInformationSummary.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/Commerce/OrderInformationSummary.cshtml
@@ -4,7 +4,33 @@
 <div class="border border-gray-300 p-6 rounded mb-8">
     <h3 class="text-xl font-medium mb-4">Contact Information</h3>
     <p class="mb-4">@Model.Order.CustomerInfo.Email</p>
-
+    <div>
+        <h3 class="text-xl font-medium mb-4">Order Summary</h3>
+        <div class="flex w-full -mx-2 mb-4">
+            <div class="flex-1 mx-2">
+                <h4 class="text-lg font-medium mb-2">Items</h4>
+                <ul>
+                    @foreach (var item in Model.Order.OrderLines)
+                    {
+                        <div>
+                            @if (item.Attributes.Count > 0)
+                            {
+                                foreach (var attr in item.Attributes)
+                                {
+                                    <div class="fs-xs" style="color: #696f78;">@attr.Value</div>
+                                    }
+                                }
+                        </div>
+                        <li>@item.Name</li>
+                    }
+                </ul>
+            </div>
+            <div class="flex-1 mx-2">
+                <h4 class="text-lg font-medium mb-2">Total</h4>
+                <p class="text-right">@Model.Order</p>
+            </div>
+        </div>
+    </div>
     <div class="flex w-full -mx-2">
         <div class="flex-1 mx-2">
             <h3 class="text-xl font-medium mb-4">Billing Information</h3>
