Deployment a7169120-1200-4a96-a9e0-f51f67b0d73f: Run number 518

--- a/src/WRA.Umbraco.Web/Views/BasicContent.cshtml
+++ b/src/WRA.Umbraco.Web/Views/BasicContent.cshtml
@@ -10,7 +10,8 @@
 @{
     var settings = Umbraco.ContentAtRoot().FirstOrDefault(x => x.ContentType.Alias == "siteSettings");
     var sections = Model.Value<IEnumerable<BlockGridItem>>("sections");
-    var currentMember = _membermanager.GetCurrentMemberAsync().Result;
+        
+    var currentMember = await _membermanager.GetCurrentMemberAsync();
     bool MemberCanViewPage = await _gatedContentService.MemberCanViewPage(Model, currentMember);
 
 }
