Deployment c13841b1-8c78-46de-a093-59e199e48da4: Run number 537

--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/accordions.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/accordions.cshtml
@@ -18,8 +18,8 @@
                     <summary class="accordion__toggle">
                         @accordion.Content.Value("label")
                         <div class="accordion__toggle-icon">
-                            <i class="fa-solid fa-chevron-down"></i>
-                            <i class="fa-solid fa-chevron-up"></i>
+                            <i class="fas fa-chevron-down"></i>
+                            <i class="fas fa-chevron-up"></i>
                         </div>
                     </summary>
                     <div class="accordion__content">
