Deployment ae71cbea-41ff-40f5-b8ec-005ac2ca63eb: Run number 539

--- a/src/WRA.Umbraco.Web/Views/BasicContent.cshtml
+++ b/src/WRA.Umbraco.Web/Views/BasicContent.cshtml
@@ -35,7 +35,7 @@
     }
 }
 @if(MemberCanViewPage){
-    <h1> Can't see this unless you're logged in!!</h1>
+    <h1> Can't see this unless you're logged in or this page is available to everyone!</h1>
 }
 
 @await Html.PartialAsync("blockgrid/default", sections)
